--- a/demo-fabrik/package.json
+++ b/demo-fabrik/package.json
@@ -2,6 +2,7 @@
   "name": "demo-fabrik",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://weffe.github.io/inversekinematics",
   "dependencies": {
     "antd": "^2.8.2",
     "konva": "^1.5.0",
@@ -17,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
