--- a/demo-fabrik/package.json
+++ b/demo-fabrik/package.json
@@ -2,7 +2,7 @@
   "name": "demo-fabrik",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://weffe.github.io/inversekinematics",
+  "homepage": "https://weffe.github.io/InverseKinematics",
   "dependencies": {
     "antd": "^2.8.2",
     "konva": "^1.5.0",
