Added a button to turn off angle displayers as those drop the performance. Also added in some caching of the drawn nodes to help with performance.

--- a/demo-fabrik/package.json
+++ b/demo-fabrik/package.json
@@ -12,6 +12,7 @@
     "three": "^0.84.0"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
